syntax="proto3";

import "google/protobuf/empty.proto";

package businessRegistration;

message BusinessCategory {
    int64 businessCategoryID = 1;
    string businessCategoryName = 2;
}

message BusinessCategories {
    repeated BusinessCategory businessCategories = 1;
}

service BusinessCategoryService {
    rpc GetBusinessCategories(google.protobuf.Empty) returns (BusinessCategories) {}
}